--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -30,7 +30,7 @@
   padding: 0;
   font-size: 2rem;
   font-weight: 700;
-  color: #e5a;
+  color: #f55555;
   text-decoration: none;
   line-height: 1;
   display: block;
@@ -59,7 +59,7 @@
   margin-top: 2rem;
   padding: 3rem 1rem;
   color: #888;
-  border-top: 5px solid #e5a;
+  border-top: 5px solid #f55555;
 
   a,
   a:link {
