--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -4,7 +4,7 @@
   color: #666;
   padding-bottom: 2rem;
   margin-bottom: 2rem;
-  border-bottom: 3px solid #e5a;
+  border-bottom: 3px solid #f55555;
 }
 
 .countries-list {
@@ -36,8 +36,8 @@
 //   grid-gap: 1rem;
 //   padding-top: 2rem;
 //   padding-bottom: 2rem;
-//   border-top: 2px solid #e5a;
-//   border-bottom: 2px solid #e5a;
+//   border-top: 2px solid #f55555;
+//   border-bottom: 2px solid #f55555;
 
 //   grid-template-columns: 1fr;
 //   grid-template-rows: auto;
