--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -1,5 +1,3 @@
-// #f58ebe
-
 .layout {
   display: grid;
   width: 100%;
@@ -8,9 +6,19 @@
 }
 
 .cookie {
-  text-align: center;
+  position: sticky;
+  display: grid;
+  grid-gap: 1rem;
+  place-items: center start;
+  top: 0;
   padding: 1rem;
   background-color: #ffffaa;
+  text-align: left;
+
+  @media (min-width: 600px) {
+    grid-template-columns: 3fr 1fr;
+    place-items: center;
+  }
 }
 
 .header {
@@ -23,6 +31,14 @@
   top: 0;
   background: #fff;
   box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+.cookie + .header {
+  top: 144px;
+
+  @media (min-width: 600px) {
+    top: 80px;
+  }
 }
 
 .logo {
