--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -29,7 +29,8 @@
   padding: 1rem;
   position: sticky;
   top: 0;
-  background: #fff;
+  z-index: 1;
+  background-color: #fff;
   box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
