--- a/src/pages/country.module.scss
+++ b/src/pages/country.module.scss
@@ -61,3 +61,18 @@
   margin-right: 8px;
   color: #888;
 }
+
+.update-data {
+  display: block;
+  grid-column: 1/-1;
+  text-align: right;
+  border-top: 1px solid #ddd;
+  margin-top: 2rem;
+  padding-top: 1rem;
+  font-size: 14px;
+
+  &:hover,
+  &:active {
+    text-decoration: none;
+  }
+}
