--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -7,25 +7,127 @@
   border-bottom: 3px solid #f55555;
 }
 
+.lead-text {
+  font-size: 1.25rem;
+}
+
 .countries-list {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: auto;
   grid-gap: 1rem;
   font-size: 1.125rem;
 
   @media (min-width: 600px) {
     font-size: 1.375rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (min-width: 1000px) {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
+.country {
+  position: relative;
+  height: 75px;
+  background-color: transparent;
+  overflow: hidden;
+
+  @media (min-width: 600px) {
+    height: 125px;
+  }
+
+  @media (min-width: 1000px) {
+    height: 90px;
+  }
+}
+
+.flag {
+  img {
+    object-fit: cover;
+    margin: 0;
+    padding: 0;
+  }
+
+  &::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba($color: #000000, $alpha: 0.9);
+
+    @media (min-width: 600px) {
+      background-color: rgba($color: #000000, $alpha: 0.8);
+      transition: background-color 0.4s;
+    }
+  }
+}
+
 .country-link {
-  display: block;
-  padding: 0.5rem;
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+  bottom: 0.5rem;
+  right: 0.5rem;
+  font-size: 1.25rem;
+  color: #fff;
+  text-decoration: none;
+  padding-right: 30px;
+  transition: color 0.4s;
+
+  @media (min-width: 600px) {
+    padding-right: 60px;
+    font-size: 1.5rem;
+  }
 
   &:hover {
     color: #f55555;
-    text-decoration: none;
+  }
+}
+
+.go-cta {
+  position: absolute;
+  font-size: 1.75rem;
+  text-align: center;
+  line-height: 1.25;
+  padding-left: 2px;
+  right: 0.5rem;
+  top: 0;
+
+  @media (min-width: 600px) {
+    right: 1rem;
+    bottom: 1rem;
+
+    &::before {
+      display: block;
+      content: '';
+      background-color: rgba(255, 255, 255, 0.25);
+      position: absolute;
+      border-radius: 50%;
+      left: 50%;
+      transform: translateX(-50%);
+
+      transition: opacity 0.4s, width 0.4s, height 0.4s;
+      opacity: 0;
+      width: 2rem;
+      height: 2rem;
+    }
+  }
+}
+
+@media (min-width: 600px) {
+  .country:hover {
+    .flag::before {
+      background-color: rgba($color: #000000, $alpha: 0.9);
+    }
+
+    .go-cta::before {
+      opacity: 1;
+      width: 2.5rem;
+      height: 2.5rem;
+    }
   }
 }
