--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -57,10 +57,10 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: rgba($color: #000000, $alpha: 0.9);
+    background-color: rgba(0, 0, 0, 0.9);
 
     @media (min-width: 600px) {
-      background-color: rgba($color: #000000, $alpha: 0.8);
+      background-color: rgba(0, 0, 0, 0.8);
       transition: background-color 0.4s;
     }
   }
@@ -121,7 +121,7 @@
 @media (min-width: 600px) {
   .country:hover {
     .flag::before {
-      background-color: rgba($color: #000000, $alpha: 0.9);
+      background-color: rgba(0, 0, 0, 0.9);
     }
 
     .go-cta::before {
