--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -7,17 +7,46 @@
 
 .cookie {
   position: sticky;
-  display: grid;
   grid-gap: 1rem;
   place-items: center start;
   top: 0;
   padding: 1rem;
   background-color: #ffffaa;
   text-align: left;
+  z-index: 1;
+}
+
+.cookie-text {
+  margin-bottom: 1rem;
+  max-width: 400px;
 
   @media (min-width: 600px) {
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
+    max-width: 800px;
+  }
+
+  @media (min-width: 1000px) {
+    max-width: 900px;
+  }
+}
+
+.cookie-cta {
+  display: block;
+  border: 0 none;
+  padding: 0.35rem 1rem;
+  border-radius: 8px;
+  background-color: #f55555;
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  border: 2px solid #f55555;
+  cursor: pointer;
+  transition: color 0.2s, background-color 0.2s;
+
+  &:hover {
+    background-color: #fff;
+    color: #f55555;
   }
 }
 
@@ -35,10 +64,14 @@
 }
 
 .cookie + .header {
-  top: 144px;
+  top: 149px;
 
   @media (min-width: 600px) {
-    top: 80px;
+    top: 125px;
+  }
+
+  @media (min-width: 1000px) {
+    top: 101px;
   }
 }
 
@@ -56,7 +89,7 @@
 .tagline {
   text-transform: uppercase;
   letter-spacing: 0.25rem;
-  color: #888;
+  color: #555;
   font-size: small;
   text-align: right;
 }
@@ -75,7 +108,7 @@
   background-color: #333;
   margin-top: 2rem;
   padding: 3rem 1rem;
-  color: #888;
+  color: #aeaeae;
   border-top: 5px solid #f55555;
 
   a,
