--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -34,19 +34,19 @@
   border: 0 none;
   padding: 0.35rem 1rem;
   border-radius: 8px;
-  background-color: #f55555;
-  color: white;
+  background-color: #333;
+  color: #fff;
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 1px;
   font-weight: bold;
-  border: 2px solid #f55555;
+  border: 2px solid #333;
   cursor: pointer;
   transition: color 0.2s, background-color 0.2s;
 
   &:hover {
     background-color: #fff;
-    color: #f55555;
+    color: #333;
   }
 }
 
