--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -27,3 +27,89 @@
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+.country-search {
+  display: block;
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.search {
+  display: block;
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.search-icon {
+  position: absolute;
+  left: 12px;
+  top: 4px;
+  bottom: 0;
+  color: #ddd;
+  margin: auto;
+}
+
+.search-input {
+  padding: 0.5rem 1rem 0.5rem 36px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.08);
+  color: #666;
+  width: 300px;
+  transition: width 0.2s;
+
+  &:focus,
+  &:active {
+    width: 100%;
+
+    @media (min-width: 600px) {
+      width: 500px;
+    }
+  }
+}
+
+.search-result {
+  display: block;
+  background-color: #fff;
+  margin: 0.5rem 0 0 0;
+  padding: 0;
+  list-style: none;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
+}
+
+.result-indicator {
+  color: #666;
+}
+
+.result-item {
+  margin: 0;
+  padding: 0 0 0 0.5rem;
+  color: #888;
+  display: grid;
+  grid-template-columns: 20px 1fr;
+  place-items: center start;
+  cursor: pointer;
+
+  &:hover,
+  &:active {
+    background-color: #f55555;
+    color: white;
+  }
+}
+
+.even-item {
+  background-color: #fafafafa;
+}
+
+.result-link {
+  padding: 1rem 0.5rem;
+  display: block;
+  width: 100%;
+  text-decoration: none;
+
+  &:hover,
+  &:active {
+    color: white;
+  }
+}
