--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -113,3 +113,74 @@
     color: white;
   }
 }
+
+.mc-form {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+
+  form {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.input {
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.08);
+  color: #666;
+  width: 100%;
+
+  @media (min-width: 600px) {
+    width: 300px;
+  }
+}
+
+.submit {
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  border: 0 none;
+  margin-top: 0.5rem;
+  width: 100%;
+
+  @media (min-width: 600px) {
+    margin-left: 0.5rem;
+    margin-top: 0;
+    width: auto;
+  }
+
+  &:not([disabled]) {
+    background-color: #f5555530;
+    color: #f55555;
+    pointer-events: all;
+    cursor: pointer;
+    transition: background-color 0.2s, color 0.2s;
+
+    &:hover,
+    &:active {
+      background-color: #f55555;
+      color: #fff;
+    }
+  }
+
+  &[disabled] {
+    pointer-events: none;
+  }
+}
+
+.success,
+.error {
+  color: #c30;
+  font-size: small;
+  padding: 0.5rem 0;
+}
+
+.error {
+  color: #c30;
+}
+.error {
+  color: #080;
+}
