--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -107,6 +107,24 @@
   justify-self: end;
 }
 
+.nav-btn {
+  display: block;
+  background-color: #f5555530;
+  color: #f55555;
+  border-radius: 4px;
+  min-width: 100px;
+  text-align: center;
+  padding: 0.75rem 1rem;
+  text-decoration: none;
+  transition: all 0.2s ease-in;
+
+  &:hover,
+  &:active {
+    color: white;
+    background: #f55555;
+  }
+}
+
 .main {
   margin: 2rem auto;
   width: 100%;
