--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -69,17 +69,11 @@
   }
 }
 
-@media (min-width: 600px) {
-  .cookie + .header {
-    top: 149px;
+.cookie + .header {
+  top: 149px;
 
-    @media (min-width: 600px) {
-      top: 125px;
-    }
-
-    @media (min-width: 1000px) {
-      top: 101px;
-    }
+  @media (min-width: 600px) {
+    top: 129px;
   }
 }
 
@@ -107,6 +101,25 @@
   justify-self: end;
 }
 
+.nav-item {
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  color: #f55555;
+  font-weight: 400;
+  padding: 0.25rem;
+
+  @media (min-width: 600px) {
+    padding: 0.5rem 1rem;
+  }
+
+  &:hover,
+  &:active {
+    text-decoration: underline;
+  }
+}
+
 .main {
   margin: 2rem auto;
   width: 100%;
@@ -132,4 +145,21 @@
 .colophone {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.plus-icon {
+  vertical-align: middle;
+  margin-right: 5px;
+  background-color: #f55555;
+  color: white;
+  border-radius: 50%;
+  transform: rotate(45deg);
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-top: -2px;
+  transition: transform 0.3s ease-in;
+}
+
+.nav-item:hover .plus-icon {
+  transform: rotate(312deg);
 }
