--- a/src/components/organisation/style.module.scss
+++ b/src/components/organisation/style.module.scss
@@ -20,10 +20,6 @@
   @media (min-width: 600px) {
     max-width: 70%;
   }
-
-  @media (min-width: 1000px) {
-    max-width: 75%;
-  }
 }
 
 .areas-covered {
@@ -174,4 +170,5 @@
 .more-details-icon {
   vertical-align: middle;
   margin-right: 3px;
+  margin-top: -2px;
 }
