--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -82,7 +82,7 @@
   padding: 0;
   font-size: 2rem;
   font-weight: 700;
-  color: #f55555;
+  color: #cd4545;
   text-decoration: none;
   line-height: 1;
   display: block;
@@ -106,7 +106,7 @@
   position: relative;
   text-align: center;
   text-decoration: none;
-  color: #f55555;
+  color: #cd4545;
   font-weight: 400;
   padding: 0.25rem;
 
@@ -130,7 +130,7 @@
   margin-top: 2rem;
   padding: 3rem 1rem;
   color: #aeaeae;
-  border-top: 5px solid #f55555;
+  border-top: 5px solid #cd4545;
 
   a,
   a:link {
@@ -150,7 +150,7 @@
 .plus-icon {
   vertical-align: middle;
   margin-right: 5px;
-  background-color: #f55555;
+  background-color: #cd4545;
   color: white;
   border-radius: 50%;
   transform: rotate(45deg);
