--- a/src/pages/country.module.scss
+++ b/src/pages/country.module.scss
@@ -1,5 +1,5 @@
 .title {
-  border-bottom: 2px solid #f55555;
+  border-bottom: 2px solid #cd4545;
 
   @media (min-width: 600px) {
     display: grid;
@@ -9,7 +9,7 @@
 }
 
 .stats {
-  border-bottom: 2px solid #f55555;
+  border-bottom: 2px solid #cd4545;
   padding: 1rem 0 0;
   margin-bottom: 2rem;
 
