--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -4,7 +4,7 @@
   color: #666;
   padding-bottom: 2rem;
   margin-bottom: 2rem;
-  border-bottom: 3px solid #f55555;
+  border-bottom: 3px solid #cd4545;
 }
 
 .lead-text {
@@ -93,7 +93,7 @@
 
   &:hover,
   &:active {
-    background-color: #f55555;
+    background-color: #cd4545;
     color: white;
   }
 }
